# webserv

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: issue-template.md
myechosever/: CMakeLists.txt  Makefile  client.cpp  server.cpp
mywebserv/: CMakeLists.txt  Makefile
mywebserv/docker/debian/: Dockerfile
mywebserv/srcs/: CMakeLists.txt  main.cpp
mywebserv/srcs/conf/: CMakeLists.txt  Conf.cpp  Conf.hpp  ConfParser.cpp  ConfParser.hpp
mywebserv/srcs/server/: CMakeLists.txt  Server.hpp  Socket.cpp  Socket.hpp  socket.cpp  socket.hpp
mywebserv/tests/: CMakeLists.txt
mywebserv/tests/conf/: CMakeLists.txt  test_Conf.cpp  test_config.txt
mywebserv/tests/includes/: color.hpp
